Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-17729

Assertion `! is_set() || m_can_overwrite_status' failed in Diagnostics_area::set_error_status (LIMIT ROWS EXAMINED)

    XMLWordPrintable

Details

    Description

      create table t1 (id int not null auto_increment primary key,k int, c char(20));
      insert into t1 (k,c) values (0,'0'), (0,'0'),(0,'0'),(0,'0'),(0,'0'),(0,'0'),(0,'0');
      SET sql_mode='STRICT_TRANS_TABLES';
      insert into t1 (c) select k from t1 limit rows examined 2;
      

      10.2 32bebfeefb219aec

      /git/10.2/sql/sql_error.cc:487: void Diagnostics_area::set_error_status(uint, const char*, const char*, const Sql_condition*): Assertion `! is_set() || m_can_overwrite_status' failed.
       
      /lib/x86_64-linux-gnu/libc.so.6(+0x2dc82)[0x7fba3dca0c82]
      sql/sql_error.cc:490(Diagnostics_area::set_error_status(unsigned int, char const*, char const*, Sql_condition const*))[0x55d650b4861c]
      sql/sql_class.cc:1051(THD::raise_condition(unsigned int, char const*, Sql_condition::enum_warning_level, char const*))[0x55d650b01663]
      sql/sql_error.cc:768(push_warning(THD*, Sql_condition::enum_warning_level, unsigned int, char const*))[0x55d650b49dae]
      sql/sql_error.cc:801(push_warning_printf(THD*, Sql_condition::enum_warning_level, unsigned int, char const*, ...))[0x55d650b4a08a]
      sql/sql_select.cc:394(handle_select(THD*, LEX*, select_result*, unsigned long))[0x55d650c40976]
      sql/sql_parse.cc:4542(mysql_execute_command(THD*))[0x55d650bb9ce1]
      sql/sql_parse.cc:8012(mysql_parse(THD*, char*, unsigned int, Parser_state*, bool, bool))[0x55d650bcfc1d]
      sql/sql_parse.cc:1826(dispatch_command(enum_server_command, THD*, char*, unsigned int, bool, bool))[0x55d650bab156]
      sql/sql_parse.cc:1378(do_command(THD*))[0x55d650ba830a]
      sql/sql_connect.cc:1335(do_handle_one_connection(CONNECT*))[0x55d650ecdd7c]
      sql/sql_connect.cc:1242(handle_one_connection)[0x55d650ecd784]
      perfschema/pfs.cc:1864(pfs_spawn_thread)[0x55d6520738d2]
      /lib/x86_64-linux-gnu/libpthread.so.0(+0x76ba)[0x7fba3e8e56ba]
      x86_64/clone.S:111(clone)[0x7fba3dd7a41d]
      

      Attachments

        Issue Links

          Activity

            People

              rucha174 Rucha Deodhar
              alice Alice Sherepa
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1d 1.25h
                  1d 1.25h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.