MDEV-17729: Assertion `! is_set() || m_can_overwrite_status' failed in Diagnostics_area::set_error_status

Analysis: When strict mode is enabled, all warnings are converted to errors
even when there is no bad data and the query is already killed.
Fix: If the query is already killed because examined rows exceeded the limit,
the warning is not because of bad data and should not be converted to error.